- feedback-fix: remove extra line - update column display name - remove  utility now text/heading both are left aligned - remove override styles to center align heading

--- a/src/app/settings/admin/presets/style.scss
+++ b/src/app/settings/admin/presets/style.scss
@@ -68,9 +68,3 @@
 #km-add-preset-btn {
   margin: 2px 0;
 }
-
-mat-card-content {
-  .mat-header-cell.km-header-cell.km-text-center {
-    text-align: center;
-  }
-}
