--- a/src/assets/css/global/_main.scss
+++ b/src/assets/css/global/_main.scss
@@ -99,10 +99,6 @@ hr {
   width: 100%;
 }
 
-.km-text-center {
-  text-align: center;
-}
-
 .km-header {
   font-size: variables.$font-size-card-title;
   line-height: 16px;
